# MAU_schedule

./: .env.template  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/backend/: Dockerfile  pyproject.toml
app/backend/app/app/: celery.py  settings.py  urls.py
app/backend/app/core/: context_processors.py  views.py
app/backend/app/mau_auth/: admin.py  apps.py  auth_class.py  models.py  urls.py  views.py
app/backend/app/mau_auth/api/: serializers.py  urls.py  views.py
app/backend/app/mau_auth/html/: forms.py  urls.py
app/backend/app/mau_auth/migrations/: 0001_initial.py  0002_tokeninfo.py
app/backend/app/notes/: admin.py  models.py  urls.py  views.py
app/backend/app/notes/api/: urls.py  views.py
app/backend/app/notes/migrations/: 0001_initial.py  0003_remove_note_group_note_schedule_key.py  0004_note_unique_note.py
app/backend/app/profiles/: forms.py  views.py
app/backend/app/schedule/: forms.py  models.py  tests.py  urls.py  views.py
app/backend/app/schedule/api/: mixins.py  serializers.py  urls.py  views.py
app/backend/app/schedule/migrations/: 0001_initial.py
app/backend/app/schedule/parser/: __init__.py  base.py  objects.py
app/backend/app/schedule/parser/ext/: __init__.py  (+2 more)
app/backend/app/schedule/swagger_examples/: teachers_keys.json
app/backend/app/schedule/templatetags/: schedule_fileters.py
app/backend/app/static/css/: base.css
app/backend/app/teacher_schedule_bookmarks/: models.py  urls.py  views.py
app/backend/app/teacher_schedule_bookmarks/api/: views.py
app/backend/app/templates/: base.html  base_header_and_footer.html
app/backend/docker/: Dockerfile.prod
app/backend/mau_auth/: admin.py  models.py
app/backend/mau_auth/api/: urls.py
app/backend/mau_auth/migrations/: 0002_alter_mauuser_options_alter_mauuser_course_and_more.py
app/backend/mau_auth/templatetags/: form_tags.py
app/backend/notes/api/: views.py
app/backend/notes/migrations/: 0002_alter_note_group.py
app/backend/notes/templates/notes/: create.html
app/backend/profiles/: urls.py
app/backend/schedule/: admin.py
app/backend/schedule/migrations/: 0002_auto_20241211_1957.py
app/backend/schedule/parser/: __init__.py
app/backend/teacher_schedule_bookmarks/: admin.py  apps.py
app/backend/teacher_schedule_bookmarks/api/: views.py
app/backend/tests/: conftest.py  pytest.ini
app/backend/utils/: local.py
(+442 files in other folders)
